//
// Protocol buffers definition for DIDA-GSTORE server
//
syntax = "proto3";
option csharp_namespace = "Client";

message ReadRequest{
  string partitionId = 1;
  string objectId = 2;
}

message ReadResponse{
  string objectValue = 1;
}

message WriteRequest{
  string partitionId = 1;
  string objectId = 2;
  string objectValue = 3;
}


message WriteResponse{
  oneof response {
    string responseMessage = 1;
    ServerUrlResponse masterServerUrl = 2;
  }
}

message ListServerRequest{
  /*nothing*/
}

message ListServerResponseEntity{
  string objectId = 1;
  string objectValue = 2;
  bool isMaster = 3;
}

message ListServerResponse{
  repeated ListServerResponseEntity objects = 1;
}

message ObjectIdentifier {
  string partitionId = 1;
  string objectId = 2;
}

message ListGlobalResponseEntity{
  repeated ObjectIdentifier identifiers = 1;
}

message ListGlobalRequest{
  /*nothing*/
}

message ListGlobalResponse{
  repeated ListGlobalResponseEntity  objects = 1;
}

message ServerUrlRequest{
  string serverId = 1;
}

message ServerUrlResponse{
  string serverUrl = 1;
}

service DIDAService{
  rpc write(WriteRequest) returns (WriteResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc listServer(ListServerRequest) returns (ListServerResponse);
  rpc listGlobal(ListGlobalRequest) returns (ListGlobalResponse);
  rpc getServerUrl(ServerUrlRequest) returns (ServerUrlResponse);
}